fix: Update extension key to baptizotaufmanager and fix auth code

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Baptizo Taufmanager",
-  "key": "baptizo-taufmanager",
+  "key": "baptizotaufmanager",
   "version": "1.0.0",
   "description": "Ein Prozess-Tool für Taufen in ChurchTools. Es dient gleichzeitig als dezentes Branding für den Taufbecken-Hersteller 'Baptizo'.",
   "author": {
